@@ -1,26 +1,0 @@
-# This file located in ${prefix}/etc/ax25/flexd.routes defines routes for flexd
-# FlexNode destination <call> declared in ${prefix}/etc/ax25/flexd.conf configuration file 
-# AX25 device <port> name defined in ${prefix}/etc/ax25/axports
-# rose device <port> defined in ${prefix}/etc/ax25/rsports (created when starting fpad)
-# netrom device <port> defined in ${prefix}/etc/ax25/nrports
-# port = ax25 port, netrom port (netnod for example), or rose device rose0
-# Examples :
-#
-# via = d for direct connect to <call> on AX25 <port> ax0, ax1,....
-#     = n for connect to FPAC node <call> at <rose address>
-#     = v for connect to <call> via <digi>
-#    'v' to connect <call> through <rose-rose0-port> via <node-rose-address>
-# or 'v' to connect <call> through NetRom <netnod-port> 
-#
-# route <call> 		<alias>	<port> 	via 	'description'	<node rose address> or <digi>
-#route	kd4yal-14	YALNET	0	v	'Linuxnet'	kd4yal-9
-#route	kd4yal-14	YALNET	rose0	n	'Linuxnet'	3100727489
-#route	kd4yal-14	YALNET	0	d	'Linuxnet'
-#
-#route	kd4yal-8	YALNET	rose0	v	'Linuxnet'	3100727489
-#route	kd4yal-14	YALNET	rose0	v	'Linuxnet'	3100727489
-#route	kd4yal-14	YALNET	netnod	v	'Linuxnet'
-#route	f6ggy		NODGGY	netnod	v	'AWz Node'
-#route	f6ggy-8		NODGGY	rose0	v	'Linuxnet'	2080847501  
-route	f6ggy		NODGGY	netnod  v	'Linuxnet'
-#
