@@ -1,22 +1,0 @@
-#
-# FPAC configuration file
-# This optional file includes routes configuration via Adjacent Nodes 
-# If present, this file MUST be ${prefix}/etc/ax25/fpac.routes
-#
-# Routes to adjacent nodes
-#
-
-Routes
-	DNIC = 2080
-	1 = KCK
-	2 = KCK
-	3 = KCK
-	4 = KCK
-	5 = KCK
-	6 = KCK
-	7 = KCK
-	8 = KCK
-	9 = KCK
-	DNIC = 0
-End
-
